--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">About</h2>
                 </div>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">
+                        PhD in Computer Science with strong machine/deep learning background and 6+ years of experience using predictive models and data processing algorithms. Expert in the languages Matlab and R/Python programming and involved at the action/gesture/sign language recognition research.
+                    </h3>
                     <div class="container mt-4">
                     <p class="justified-text">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac suscipit ex. Nunc vitae turpis ut justo semper posuere. Duis ac magna quis dui facilisis bibendum. In hac habitasse platea dictumst. Phasellus consectetur nisl ac metus sollicitudin, a commodo felis rhoncus. Donec a orci ex. Integer nec tincidunt ex. Ut quis nisi a risus posuere laoreet.
