--- a/index.html
+++ b/index.html
@@ -41,26 +41,18 @@
             <div class="container">
                 <div class="masthead-subheading">Welcome To Our Studio!</div>
                 <div class="masthead-heading text-uppercase">It's Nice To Meet You</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More</a>
+                <a class="btn btn-primary btn-xl text-uppercase" href="#About">Tell Me More</a>
             </div>
         </header>
         <!-- Services-->
-        <section class="page-section" id="services">
+        <section class="page-section" id="About">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">About</h2>
                 </div>
                     <h3 class="section-subheading text-muted">
                         PhD in Computer Science with strong machine/deep learning background and 6+ years of experience using predictive models and data processing algorithms. Expert in the languages Matlab and R/Python programming and involved at the action/gesture/sign language recognition research.
-                    </h3>
-                    <div class="container mt-4">
-                    <p class="justified-text">
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac suscipit ex. Nunc vitae turpis ut justo semper posuere. Duis ac magna quis dui facilisis bibendum. In hac habitasse platea dictumst. Phasellus consectetur nisl ac metus sollicitudin, a commodo felis rhoncus. Donec a orci ex. Integer nec tincidunt ex. Ut quis nisi a risus posuere laoreet.
-                    </p>
-                    <p class="justified-text">
-                      Curabitur fringilla nisl eu velit tempus tincidunt. Nam sit amet neque eu ex scelerisque iaculis. Sed accumsan posuere turpis, sit amet euismod dolor tincidunt eu. Maecenas eget quam sit amet orci scelerisque semper vel non est. Maecenas ultrices bibendum scelerisque. Vivamus nec varius odio. In ac turpis ligula.
-                    </p>
-                  </div>
+                    </h3>                   
                 <div class="row text-center">
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
